# key-mgmt

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  blob-server.Dockerfile  boltlabs-release.toml  definition-of-done.md  docker-compose.yml  healthcheck.sh  index.html  publish-to-local-cargo-registry.sh  rustfmt.toml  sqlx-data.json
blob-server/blob-server-backend/: Cargo.toml  build.rs
blob-server/blob-server-backend/proto/: blob_server_rpc.proto
blob-server/blob-server-backend/src/: config.rs  database.rs  error.rs  helpers.rs  lib.rs  server.rs
blob-server/blob-server-backend/src/database/: blobs.rs
blob-server/blob-server-cli/: Cargo.toml
blob-server/blob-server-cli/src/: config.rs  main.rs
dams/: Cargo.toml  build.rs
dams-client/: Cargo.toml
dams-client/src/: api.rs  client.rs  error.rs  lib.rs
dams-client/src/api/: arbitrary_secrets.rs  authenticate.rs  create_storage_key.rs  generate.rs  register.rs
dams-client/src/api/arbitrary_secrets/: generate.rs  retrieve.rs
dams-key-server/: Cargo.toml
dams-key-server/src/: cli.rs  command.rs  constants.rs  database.rs  error.rs  lib.rs  main.rs  operations.rs  policy_engine.rs  server.rs
dams-key-server/src/command/: authenticate.rs  create.rs  create_storage_key.rs  generate.rs  register.rs  retrieve.rs
dams-key-server/src/database/: log.rs  user.rs
dams-key-server/src/operations/: authenticate.rs  create_storage_key.rs  generate.rs  register.rs  retrieve.rs  retrieve_storage_key.rs
dams-key-server/src/server/: operation.rs  service.rs
dams-local-client/: Cargo.toml
dams-local-client/src/: api.rs  cli.rs  command.rs  lib.rs
dams-local-client/src/command/: create.rs  retrieve.rs
dams-tests/: .env  Cargo.toml
dams-tests/src/: main.rs
dams-tests/tests/: client.rs  common.rs  end_to_end.rs  local_client.rs  main.rs  register.rs  remote_client.rs
dams/proto/: dams_rpc.proto
dams/src/: audit_log.rs  blockchain.rs  channel.rs  config.rs  crypto.rs  defaults.rs  error.rs  key_mgmt.rs  keys.rs  lib.rs  models.rs  opaque_storage.rs  pem_utils.rs  protocol.rs  transaction.rs  transport.rs  types.rs  user.rs
dams/src/config/: client.rs  opaque.rs  server.rs
dams/src/crypto/: client.rs  generic.rs  register.rs
dams/src/key_mgmt/: client.rs  server.rs
dams/src/key_mgmt/client/: create.rs  retrieve.rs
dams/src/key_mgmt/server/: create.rs  retrieve.rs
dams/src/types/: authenticate.rs  generate.rs  register.rs  retrieve.rs  retrieve_storage_key.rs
lkic/: Cargo.toml  README.md
lkic/src/: app.rs  cli.rs  command.rs  main.rs  state.rs  storage.rs
lock-keeper/: Cargo.toml  build.rs
lock-keeper-client/: Cargo.toml
lock-keeper-client/src/: api.rs  channel.rs  client.rs  config.rs  error.rs  lib.rs  response.rs
lock-keeper-client/src/api/: arbitrary_secrets.rs  authenticate.rs  create_storage_key.rs  delete_key.rs  generate.rs  generate_secret.rs  get_user_id.rs  import.rs  import_signing_key.rs  register.rs  remote_generate.rs  remote_generate_signing_key.rs  remote_sign_bytes.rs  retrieve.rs  retrieve_audit_events.rs  retrieve_server_encrypted_blob.rs  store_server_encrypted_blob.rs
lock-keeper-client/src/api/arbitrary_secrets/: generate.rs  retrieve.rs
lock-keeper-key-server/: Cargo.toml
lock-keeper-key-server/src/: channel.md  cli.rs  config.rs  constants.rs  database.rs  error.rs  lib.rs  operations.rs  policy_engine.rs  server.rs
lock-keeper-key-server/src/database/: audit_event.rs  log.rs  secrets.rs  user.rs
lock-keeper-key-server/src/operations/: authenticate.rs  create_storage_key.rs  delete_key.rs  generate.rs  generate_secret.rs  get_user_id.rs  import_signing_key.rs  logout.rs  register.rs  remote_generate.rs  remote_generate_signing_key.rs  remote_sign_bytes.rs  retrieve.rs  retrieve_audit_events.rs  retrieve_secret.rs  retrieve_server_encrypted_blob.rs  retrieve_signing_key.rs  retrieve_storage_key.rs  store_server_encrypted_blob.rs
lock-keeper-key-server/src/server/: channel.rs  context.rs  database.rs  metrics.rs  opaque_storage.rs  operation.rs  service.rs  session_cache.rs  session_key_cache.rs
lock-keeper-tests/: Cargo.toml
lock-keeper-tests/src/: config.rs  database.rs  end_to_end.rs  error.rs  main.rs  test_suites.rs  utils.rs
lock-keeper-tests/src/database/: audit_event.rs  secret.rs  user.rs
lock-keeper-tests/src/end_to_end/: operations.rs  test_cases.rs
lock-keeper-tests/src/end_to_end/operations/: authenticate.rs  export.rs  generate.rs  import.rs  register.rs  remote_generate.rs  remote_sign.rs  (+1 more)
lock-keeper-tests/src/test_suites/: client_auth.rs  config_files.rs  database.rs  end_to_end.rs  mutual_auth.rs  session_cache.rs
lock-keeper-tests/tests/: common.rs  end_to_end.rs
lock-keeper/proto/: lock_keeper_rpc.proto
lock-keeper/src/: audit_event.rs  audit_log.rs  channel.rs  config.rs  constants.rs  crypto.rs  defaults.rs  error.rs  infrastructure.rs  keys.rs  lib.rs  opaque_storage.rs  pem_utils.rs  types.rs  user.rs
lock-keeper/src/config/: client.rs  opaque.rs  server.rs
lock-keeper/src/crypto/: arbitrary_secret.rs  cryptor.rs  cryptor_key.rs  data_blob.rs  generic.rs  password.rs  password_key.rs  seal_signing_private_key.rs  secure_structs.rs  sharding.rs  signing_key.rs  signing_private_key.rs  storage_key.rs
lock-keeper/src/infrastructure/: channel.rs  logging.rs  pem_utils.rs  sensitive_info.rs
lock-keeper/src/types/: audit_event.rs  authenticate.rs  create_storage_key.rs  database.rs  operations.rs  retrieve_audit_events.rs
persistence/lk-session-hashmap/: Cargo.toml
persistence/lk-session-hashmap/src/: api.rs  config.rs  error.rs  lib.rs
persistence/lock-keeper-mongodb/: Cargo.toml
persistence/lock-keeper-mongodb/src/: api.rs  config.rs  constants.rs  error.rs  lib.rs
persistence/lock-keeper-session-cache-sql/: Cargo.toml
persistence/lock-keeper-session-cache-sql/src/: api.rs  config.rs  error.rs  lib.rs  types.rs
persistence/lock-keeper-sql/: Cargo.toml  sql_database.md
persistence/lock-keeper-sql/src/: api.rs  config.rs  error.rs  lib.rs  types.rs
(+4801 files in other folders)
