[package]
name = "dams-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1"
dams = { version = "0.1.0", path = "../dams" }
dams-key-server = { version = "0.1.0", path = "../dams-key-server" }
dams-client = { version = "0.1.0", path = "../dams-client", features=["allow_explicit_certificate_trust"] }
futures = "0"
mongodb = "2.3.0"
rand = "0"
structopt = "0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.8.0"
tracing = "0"
tracing-futures = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
