[package]
name = "dams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Use this flag for temporary code that does not properly implement cryptography
# but is still useful for testing purposes.
broken-crypto = []

[dependencies]
argon2 = "0.4"
async-trait = "0"
bincode = "1"
bytes = { version = "1", features = ["serde"] }
chacha20poly1305 = "0"
directories = "3"
futures = "0"
generic-array = "0"
hkdf = "0"
http = "0"
http-serde = "1"
humantime = "2"
humantime-serde = "1"
mongodb = "2.3.0"
opaque-ke = { version = "2.0.0-pre.3", features = ["argon2"] }
prost = "0.11.0"
rand = "0"
serde = { version = "1", features = ["derive"] }
serde_with = "1"
sha3 = "0"
tracing = "0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0"
tonic = "0.8.0"
webpki = "0"

[build-dependencies]
tonic-build = "0.8.0"
