[package]
name = "lkic"
version.workspace = true
edition = "2021"


[dependencies]
# Git dependencies
lock-keeper = { version = "0.2.0", path = "../lock-keeper" }
lock-keeper-client = { version = "0.2.0", path = "../lock-keeper-client" }

# Workspace dependencies
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true

# Other dependencies
anyhow = "1"
hex = "0.4"
