[package]
name = "lock-keeper-client"
version.workspace = true
edition = "2021"


[features]
allow_explicit_certificate_trust = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Git dependencies
lock-keeper = { version = "0.2.0", path = "../lock-keeper" }

# Workspace dependencies
argon2.workspace = true
async-trait.workspace = true
bincode.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
opaque-ke.workspace = true
prost.workspace = true
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
structopt.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
