[package]
name = "lock-keeper-key-server"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Git dependencies
lock-keeper = { version = "0.2.0", path = "../lock-keeper" }

# Workspace dependencies
argon2.workspace = true
async-trait.workspace = true
bincode.workspace = true
clap.workspace = true
bson.workspace = true
futures.workspace = true
hyper.workspace = true
opaque-ke.workspace = true
prost.workspace = true
rand.workspace = true
rustls.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
uuid.workspace = true
zeroize.workspace = true

# Other dependencies
humantime-serde = "1.1.1"
strum = { version = "0.24.1", features = ["derive"] }
tower = "0.4"
tonic-reflection = "0.6.0"

[dev-dependencies]
generic-array.workspace = true
