[package]
name = "lock-keeper-tests"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local dependencies
lock-keeper-client = { version = "2.3.2", registry = "key-mgmt-registry" }
lock-keeper-key-server = { path = "../lock-keeper-key-server" }
lock-keeper-session-cache-sql = { path = "../persistence/lock-keeper-session-cache-sql" }
lock-keeper-postgres = { path = "../persistence/lock-keeper-sql"}

# Workspace dependencies
clap.workspace = true
futures.workspace = true
generic-array.workspace = true
opaque-ke.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

# Other dependencies
colored = "2.0"
base64 = "0.13"
