[package]
name = "lock-keeper"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
argon2.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytes.workspace = true
futures.workspace = true
generic-array.workspace = true
http.workspace = true
opaque-ke.workspace = true
prost.workspace = true
rand.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
zeroize.workspace = true


# Other dependencies
aes-gcm = "0.10.2" # Used for encryption/decryption of sharded keys.
anyhow = "1.0"
chacha20poly1305 = "0.10"
hkdf = "0.12"
k256 = { version = "0.13.1", features = ["ecdsa", "pem", "serde"] }
sha3 = "0.10"
hex = "0.4"
# vsss-rs used for shamir f.
vsss-rs = "3.2"

[build-dependencies]
tonic-build = "0.8.0"
