[package]
name = "blob-server-backend"
edition = "2021"
version.workspace = true

[dependencies]
argon2.workspace = true
humantime-serde.workspace = true
hyper.workspace = true
prost.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_with.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build = "0.8.0"
