[package]
name = "lk-session-hashmap"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Git dependencies
lock-keeper = { version = "0.2.0", path = "../../lock-keeper" }
lock-keeper-key-server = { version = "0.2.0", path = "../../lock-keeper-key-server" }

# Workspace dependencies
async-trait.workspace = true
futures.workspace = true
opaque-ke.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true

[dev-dependencies]
generic-array.workspace = true
